--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.loader {
+    width: 100px;
+    height: 100px;
+    border: 10px solid gray;
+    border-radius: 50%;
+    /* Add animations */
+    animation: span 1s linear infinite;
+    /* adding space between animations */
+    border-top-color: transparent;
+    /* add flexbox */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* add psoudoElement */
+.loader::after {
+    content: "";
+    width: 50px;
+    height: 50px;
+    border: 5px solid gray;
+    border-radius: 50%;
+    /* Add animations */
+    animation: span 1s linear infinite;
+    /* adding space between animations */
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+}
+
+/* Add animations */
+@keyframes span {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
