--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .loader {
     width: 100px;
     height: 100px;
